<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/button"
            android:layout_width="109dp"
            android:layout_height="66dp"
            android:id="@+id/button2" tools:ignore="MissingConstraints" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="encoder" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/Changed"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:id="@+id/Deformed" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="120dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:hint="@string/Edit_Hint" tools:targetApi="o" app:layout_constraintHorizontal_bias="0.492"
            android:inputType="textLongMessage" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="horizontal"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/Encode_Button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <RadioButton
                android:text="@string/encode"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:id="@+id/Encode_Button"/>
        <RadioButton
                android:text="@string/decode"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:id="@+id/Decode_Button"/>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>